<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="264dp"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/drawer_header" />

    <LinearLayout
        android:id="@+id/btnPremium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="20sp"
        android:background="@drawable/bg_less_round_accent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_premium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/get_premium_nav"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp">


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semi_bold"
                android:padding="8dp"
                android:text="@string/general"
                android:textAllCaps="true"
                android:textColor="@color/text_color_gray" />


            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/language_nav"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_translate" />




            <TextView
                android:id="@+id/tv_reset_ringtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/reset_ringtone"

                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_notifications"
                app:drawableTint="@color/text_color_primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_semi_bold"
                android:padding="8dp"
                android:text="@string/other_links"
                android:textAllCaps="true"
                android:textColor="@color/text_color_gray" />


            <TextView
                android:id="@+id/tv_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/feedback"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_thumb_up" />


            <TextView
                android:id="@+id/tv_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/rate_us"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_star" />


            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_privacy_policy" />


            <TextView
                android:id="@+id/tv_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawablePadding="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:gravity="center_vertical"
                android:paddingVertical="16dp"
                android:text="@string/share_us"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/ic_share" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>