<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingVertical="16dp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color_primary"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/set_as_wallpaper"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/tv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:fontFamily="@font/urbanist_semi_bold"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/home_screen"
        android:textColor="@color/text_color_primary"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_set_home_wall" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/stroke_lang_item" />

    <TextView
        android:id="@+id/tv_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:fontFamily="@font/urbanist_semi_bold"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/lock_screen"
        android:textColor="@color/text_color_primary"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_lock_wallpaper" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/stroke_lang_item" />

    <TextView
        android:id="@+id/tv_both"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:fontFamily="@font/urbanist_semi_bold"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/home_lock_screen"
        android:textColor="@color/text_color_primary"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_set_both" />





</LinearLayout>



