<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="com.professor.playstorebaseproject.ui.screens.LanguageActivity">

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            android:visibility="gone" />

        <TextView
            style="@style/textview_large"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/select_language" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ivDone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:background="@drawable/bg_round_accent"
            android:text="@string/done"
            android:textColor="@color/text_color_secondary"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iv_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:src="@drawable/ic_checked_white"
            android:visibility="gone" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_toolbar_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lang" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/text_color_primary"
                android:textSize="20sp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/select_language"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/text_color_primary"
                android:textSize="14sp"
                android:letterSpacing="0.04"
                android:layout_marginTop="16dp"
                android:maxLines="2"
                android:paddingVertical="8dp"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/language_desc"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:id="@+id/iv_done_2"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_large" />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/btn_done"
            android:visibility="gone"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp" />

    <include
        android:id="@+id/includeAd"
        layout="@layout/shimmer_layout_lang_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

         />


</LinearLayout>
